# parkour

./: .gitignore  README.md  justfile  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/bitcoinopentools/parkour/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/bitcoinopentools/parkour/: MainActivity.kt
app/src/main/java/org/bitcoinopentools/parkour/domain/: OnboardingPage.kt  Wallet.kt
app/src/main/java/org/bitcoinopentools/parkour/presentation/navigation/: Destinations.kt  NavigationRoot.kt
app/src/main/java/org/bitcoinopentools/parkour/presentation/ui/components/: ParkourButton.kt
app/src/main/java/org/bitcoinopentools/parkour/presentation/ui/screens/: HomeScreen.kt  OnboardingScreen.kt  OnchainScreen.kt  PlaceHolderScreen.kt  ReceiveScreen.kt  SendScreen.kt
app/src/main/java/org/bitcoinopentools/parkour/presentation/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/bitcoinopentools/parkour/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/bitcoinopentools/parkour/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.sh  uniffi.toml
rust/examples/: basic.rs  handshake_test.rs  just_bark.rs  onchain.rs
rust/src/: lib.rs  uniffi-lib.rs
