[package]
name = "lib_ark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "ark"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "=0.29.3" }

[build-dependencies]
uniffi = { version = "=0.29.3", features = ["build"] }
