[package]
name = "ark_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "ark_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
# Ark
bark-client = { path = "../../bark/bark", features = ["tls-webpki-roots"], default-features = false }

# Bitcoin
bitcoin = "0.32.6"
bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }

uniffi = { version = "=0.29.3" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "macros"] }

[build-dependencies]
uniffi = { version = "=0.29.3", features = ["build"] }
